--- a/prepros.config
+++ b/prepros.config
@@ -919,6 +919,17 @@
           "autoCompile": true,
           "sourceMap": true
         }
+      },
+      {
+        "file": "js/script.js",
+        "config": {
+          "tasks": {
+            "babel": {
+              "enable": true
+            }
+          },
+          "autoCompile": true
+        }
       }
     ]
   }
