--- a/prepros.config
+++ b/prepros.config
@@ -618,7 +618,7 @@
           },
           {
             "task": "babel",
-            "enable": false
+            "enable": true
           },
           {
             "task": "bundle-js",
